# DocAIAgent

./: .gitignore  README.md  architecture.md  documents.md  endpoint_spec.md  guideline.md  guideline2.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  artifacts.py  runs.py
backend/app/renderers/: __init__.py  html_slide_renderer.py
backend/app/schemas/: __init__.py  run.py  slidespec.py
backend/app/services/: __init__.py  agent_service.py  export_service.py  html_capture_service.py  llm_service.py  storage_service.py
backend/app/templates/slides/: base.html  big_number.html  chart_focus.html  closing.html  comparison.html  image_left.html  image_right.html  one_column.html  quote_center.html  section_header.html  stats_grid.html  table_focus.html  three_column.html  timeline.html  title_center.html  two_column.html
backend/static/: app.js  index.html  styles.css
specs/: CHANGELOG.md  README.md
specs/examples/ir/: slidespec_minimal.json
specs/examples/render/: layout_plan_example.json  pptx_ops_example.json  render_report_example.json
specs/examples/workflow/: slides_deck_builder_run_request.json
specs/layout_presets/builtin_default_v1/: package.json
specs/schemas/inputs/: docs_doc_builder_v1.schema.json  slides_deck_builder_v1.schema.json
specs/schemas/ir/: docspec_v1.schema.json  outline_v1.schema.json  slidespec_v1.schema.json
specs/schemas/layout/: layout_plan_v1.schema.json  layout_preset_package_v1.schema.json
(+29 files in other folders)
