[project]
name = "DocAIAgent"  # 원하는 프로젝트 이름
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14" # 사용하는 파이썬 버전
dependencies = [
    "alembic>=1.13.0",
    "anthropic>=0.18.0",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.2",
    "lxml>=5.1.0",
    "openai>=1.12.0",
    "playwright>=1.57.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-pptx>=0.6.21",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.25",
    "sse-starlette>=1.8.0",
    "uvicorn[standard]>=0.27.0",
]
